# kodi

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-01-17-kodi-design.md
kodi/: __init__.py  admin.py  cache.py  cache_backends.py  context.py  core.py  exceptions.py  fastapi.py  models.py  router.py  schema.py
tests/: conftest.py  test_cache.py  test_core.py
